# SolidHA

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.ci  Makefile  README.md  agent  pyproject.toml  repository.yaml
.github/: labels.yml  pull_request_template.md
.github/workflows/: ci.yml  post-merge.yml
addons/ha-llm-ops/: Dockerfile  README.md  config.yaml  pyproject.toml  run.sh
addons/ha-llm-ops/agent/: __main__.py  devux.py  observability.py  parse.py  problems.py  prompt.py  redact.py
addons/ha-llm-ops/agent/analysis/: __init__.py  context.py  parse.py  patterns.py  prompt_builder.py  runner.py  storage.py  types.py
addons/ha-llm-ops/agent/analysis/llm/: __init__.py  base.py  mock.py  openai.py
addons/ha-llm-ops/agent/contracts/: __init__.py  rca.py  rca_v1.json
addons/ha-llm-ops/agent/executor/: __init__.py  action_execution_v1.json  action_proposal_v1.json  contracts.py  execution_result_v1.json  policy.py
addons/ha-llm-ops/agent/llm/: __init__.py  mock.py  openai.py
addons/ha-llm-ops/agent/templates/: details.html  index.html
addons/ha-llm-ops/translations/: en.yaml
agent/: __init__.py  main.py
docs/: README.md  example_lovelace_card.yaml
tests/: test_agent.py  test_agent_main_runner.py  test_analysis_context.py  test_analysis_e2e.py  test_analysis_import.py  test_analysis_llm_openai.py  test_analysis_parse.py  test_analysis_prompt_builder.py  test_analysis_runner.py  test_analysis_storage.py  test_analysis_types.py  test_devux.py  test_event_batcher.py  test_executor_contracts.py  test_home_assistant_docker.py  test_homeassistant_live.py  test_llm_factory.py  test_llm_openai.py  test_monitor.py  test_monitor_docker.py  test_monitor_http.py  test_monitor_logging.py  test_observability.py  test_observability_docker.py  test_parse.py  test_patterns.py  test_policy.py  test_problem_utils.py  test_prompt_builder.py  test_rca_contract.py  test_recurring_incidents.py  update_prompt_snapshot.py
tests/golden/: policy_invalid.yaml  policy_valid.yaml  prompt_input.json  prompt_output.txt  rca_invalid.json  rca_valid.json
tests/snapshots/: rca_prompt.txt
