[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solidha-agent"
version = "0.0.1"
description = "HA LLM Ops agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.7",
    "mypy>=1.7",
    "pre-commit>=3.4",
    "mdformat>=0.7",
    "types-requests",
    "types-PyYAML",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["addons/ha-llm-ops"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "addons/ha-llm-ops"
exclude = ["build", "tests"]

[tool.pytest.ini_options]
markers = [
    "integration: mark tests requiring Docker",
    "docker: tests that require a local Docker daemon",
]
pythonpath = ["addons/ha-llm-ops"]
addopts = "--cov=agent --cov-report=term-missing --cov-fail-under=100"

[tool.setuptools]
package-dir = {"" = "addons/ha-llm-ops"}
packages = ["agent"]

[tool.setuptools.package-data]
"agent" = []

[tool.coverage.run]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 100
